fix: type safety, Java 17 compat, and null safety in idgen and patientdocuments
- Replace unchecked Hibernate query casts with typed query(hql, Class) API
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Fix ValidationException import moved to org.openmrs.api in OpenMRS platform 2.x
- Remove manual changedBy/dateChanged setting superseded by OpenMRS interceptors
- Add type-safe map helpers in EncounterXmlBuilder and PatientIdStickerXmlReportRenderer
- Use TypeReference for Jackson deserialization to preserve generic type info
- Guard identifier/address loops against null and use Boolean.TRUE.equals for safety

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>